--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,7 +9,9 @@
 	"customizations": {
     "vscode": {
       "extensions": [
-        "runem.lit-plugin"
+        "runem.lit-plugin",
+        "bradlc.vscode-tailwindcss",
+        "syler.sass-indented"
       ]
     }
   }
