--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "lit-tailwindcss",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -16,6 +15,11 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.23.3",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "sass": "^1.69.5",
+    "tailwindcss": "^3.3.5",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.0",
     "vite": "^4.5.0"
   }
