--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "preview": "vite preview"
   },
   "keywords": [],
-  "author": "",
+  "author": "reftch",
   "license": "MIT",
   "dependencies": {
     "lit": "^3.0.2"
