--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "reftch",
   "license": "MIT",
   "dependencies": {
-    "lit": "^3.0.2"
+    "lit": "^3.0.2",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.23.3",
